--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/face-api.js/dist/face-api.min.js"
+            ]
           },
           "configurations": {
             "production": {
